--- a/hygiene-dashboard.yaml
+++ b/hygiene-dashboard.yaml
@@ -1,16 +1,20 @@
-name: Hygiene Checks
+name: Hygiene Checks Pipeline
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
   hygiene-checks:
-    name: Run Checkstyle + PMD + JaCoCo
+    name: Hygiene Checks - Checkstyle + PMD + JaCoCo + Sonar
     runs-on: windows-latest
     env:
       JACOCO_MIN_COVERAGE: 0.1
       CHECKSTYLE_PMD_MAX_TOTAL_VIOLATIONS: 50
+      CHECKSTYLE_MAX_VIOLATIONS: 16000
+      PMD_MAX_VIOLATIONS: 63
+      SONAR_ORG: ${{ vars.SONAR_ORG }}
+      SONAR_PROJECT_KEY: ${{ vars.SONAR_PROJECT_KEY }}
 
     steps:
       - name: 📥 Checkout Code
@@ -128,6 +132,29 @@ jobs:
             logs/**
 
       ##########################
+      # DOWNLOAD SONAR-SCANNER
+      ##########################
+
+      - name: 📦 Download and Setup SonarScanner 7.1.0.4889
+        shell: bash
+        run: |
+          curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-7.1.0.4889-windows-x64.zip
+          mkdir tools/sonar-scanner
+          unzip sonar-scanner.zip -d tools/sonar-scanner
+          echo "SONAR_SCANNER_HOME=$PWD/tools/sonar-scanner-7.1.0.4889-windows" >> $GITHUB_ENV
+          echo "$PWD/tools/sonar-scanner/sonar-scanner-7.1.0.4889-windows/bin" >> $GITHUB_PATH
+          
+      ################################
+          # RUN SONAR CLOUD ANALYSIS
+      ################################
+      - name: 🔎 Run SonarCloud Scan (via batch)
+        if: success()
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: scripts\run-sonar-scan-admin.bat
+        shell: cmd
+
+      ##########################
       # SUMMARY SECTION
       ##########################
 
@@ -165,19 +192,27 @@ jobs:
 
           # Write summary
           echo "### 🧪 Hygiene Summary (Checkstyle + PMD + JaCoCo)" >> $env:GITHUB_STEP_SUMMARY
-          echo "| Metric       | Value        |" >> $env:GITHUB_STEP_SUMMARY
-          echo "|--------------|--------------|" >> $env:GITHUB_STEP_SUMMARY
-          echo "| Checkstyle   | $checkstyleViolations     |" >> $env:GITHUB_STEP_SUMMARY
-          echo "| PMD          | $pmdViolations     |" >> $env:GITHUB_STEP_SUMMARY
-          echo "| Violations   | $totalViolations     |" >> $env:GITHUB_STEP_SUMMARY
-          echo "| Coverage     | $jacocoCoverage%   |" >> $env:GITHUB_STEP_SUMMARY
-
+          echo "|               **Metrics**         |      **Values**      |" >> $env:GITHUB_STEP_SUMMARY
+          echo "|-----------------------------------|----------------------|" >> $env:GITHUB_STEP_SUMMARY
+          echo "| Checkstyle Violations             | $checkstyleViolations|" >> $env:GITHUB_STEP_SUMMARY
+          echo "| PMD Code Smells                   | $pmdViolations       |" >> $env:GITHUB_STEP_SUMMARY
+          echo "| Total (PMD=CHECKSTYLE) Violations | $totalViolations     |" >> $env:GITHUB_STEP_SUMMARY
+          echo "| Coverage                          | $jacocoCoverage%     |" >> $env:GITHUB_STEP_SUMMARY
+          
+          # === SonarCloud Dashboard Link ===
+          $org = $env:SONAR_ORG
+          $projectKey = $env:SONAR_PROJECT_KEY
+          $branch = "${{ github.ref_name }}"
+          $sonarUrl = "https://sonarcloud.io/dashboard?id=$projectKey&branch=$branch"
+          echo "" >> $env:GITHUB_STEP_SUMMARY
+          echo "🔗 [View full SonarCloud Report]($sonarUrl)" >> $env:GITHUB_STEP_SUMMARY
+          
           if ($jacocoCoverage -lt $env:JACOCO_MIN_COVERAGE) {
             echo "⚠️ Warning: Coverage $jacocoCoverage% is below threshold $env:JACOCO_MIN_COVERAGE%" >> $env:GITHUB_STEP_SUMMARY
           } else {
             echo "**✅ Good Coverage Levels in code!** Great job! 🎉" >> $env:GITHUB_STEP_SUMMARY
           }
-
+          
           if ($totalViolations -eq 0) {
             echo "**✅ Clean Code!** Great job! 🎉" >> $env:GITHUB_STEP_SUMMARY
           } elseif ($totalViolations -lt $env:CHECKSTYLE_PMD_MAX_TOTAL_VIOLATIONS) {
@@ -185,10 +220,35 @@ jobs:
           } else {
             echo "**❌ High Violations — requires attention.**" >> $env:GITHUB_STEP_SUMMARY
           }
+          $shouldFail = $false
+          
+          if ($jacocoCoverage -lt $env:JACOCO_MIN_COVERAGE) {
+          echo "⚠️ Warning: Coverage $jacocoCoverage% is below threshold $env:JACOCO_MIN_COVERAGE%" >> $env:GITHUB_STEP_SUMMARY
+          $shouldFail = $true
+          }
 
-       ##########################
-           # SUMMARY SECTION
-       ##########################
+          if ($checkstyleViolations -gt $env:CHECKSTYLE_MAX_VIOLATIONS) {
+            echo "❌ Checkstyle violations ($checkstyleViolations) exceed threshold ($env:CHECKSTYLE_MAX_VIOLATIONS)" >> $env:GITHUB_STEP_SUMMARY
+            $shouldFail = $true
+          }
+
+          if ($pmdViolations -gt $env:PMD_MAX_VIOLATIONS) {
+            echo "❌ PMD violations ($pmdViolations) exceed threshold ($env:PMD_MAX_VIOLATIONS)" >> $env:GITHUB_STEP_SUMMARY
+            $shouldFail = $true
+          }
+          # Outcome message
+          if ($totalViolations -eq 0 -and -not $shouldFail) {
+            echo "**✅ Clean Code!** Great job! 🎉" >> $env:GITHUB_STEP_SUMMARY
+          } elseif ($shouldFail) {
+            echo "**❌ Failing due to threshold violations.**" >> $env:GITHUB_STEP_SUMMARY
+            exit 1
+          } else {
+            echo "**⚠️ Some issues found, but within threshold.**" >> $env:GITHUB_STEP_SUMMARY
+          }
+
+      ##########################
+      # SUMMARY SECTION
+      ##########################
 
       - name: 🧹 Full Cleanup
         shell: cmd
