--- a/hygiene-dashboard.yaml
+++ b/hygiene-dashboard.yaml
@@ -9,14 +9,21 @@ jobs:
     name: Hygiene Checks - Checkstyle + PMD + JaCoCo + Sonar
     runs-on: windows-latest
     env:
-      JACOCO_MIN_COVERAGE: 0.1
+      JACOCO_MIN_COVERAGE: 0.05
       CHECKSTYLE_PMD_MAX_TOTAL_VIOLATIONS: 50
       CHECKSTYLE_MAX_VIOLATIONS: 16000
       PMD_MAX_VIOLATIONS: 63
       SONAR_ORG: ${{ vars.SONAR_ORG }}
       SONAR_PROJECT_KEY: ${{ vars.SONAR_PROJECT_KEY }}
+      SKIP_ECHO: true
 
     steps:
+
+      - name: ⏱️ Capture Job Start Time
+        id: start_time
+        shell: bash
+        run: echo "startTime=$(date +%s)" >> $GITHUB_OUTPUT
+
       - name: 📥 Checkout Code
         uses: actions/checkout@v4
 
@@ -143,9 +150,9 @@ jobs:
           unzip sonar-scanner.zip -d tools/sonar-scanner
           echo "SONAR_SCANNER_HOME=$PWD/tools/sonar-scanner-7.1.0.4889-windows" >> $GITHUB_ENV
           echo "$PWD/tools/sonar-scanner/sonar-scanner-7.1.0.4889-windows/bin" >> $GITHUB_PATH
-          
+
       ################################
-          # RUN SONAR CLOUD ANALYSIS
+        # RUN SONAR CLOUD ANALYSIS
       ################################
       - name: 🔎 Run SonarCloud Scan (via batch)
         if: success()
@@ -155,10 +162,53 @@ jobs:
         shell: cmd
 
       ##########################
+       # FETCH SONARCLOUD INFO
+      ##########################
+
+      - name: 🧠 Fetch SonarCloud Issue Count (OPEN)
+        id: sonar_issues
+        shell: pwsh
+        run: |
+          # Confirm if token is passed
+          if (-not $env:SONAR_TOKEN) {
+            Write-Error "❌ SONAR_TOKEN is empty!"
+            exit 1
+          }
+
+          # Encode token correctly (with colon!)
+          $encodedAuth = [Convert]::ToBase64String([Text.Encoding]::ASCII.GetBytes("$env:SONAR_TOKEN:"))
+          Write-Host "🔐 Encoded Auth: $encodedAuth"
+
+          $headers = @{ Authorization = "Basic $encodedAuth" }
+          $url = "https://sonarcloud.io/api/issues/search?issueStatuses=OPEN&ps=1&organization=hemantbellanilearns77&componentKeys=hemantbellanilearns77_udemy_lpa_javamasterclass"
+
+          Write-Host "📡 Calling SonarCloud API: $url"
+
+          try {
+            $response = Invoke-WebRequest -Uri $url -Method Get
+            $body = $response.Content
+
+            if ($body -match '"total"\s*:\s*(\d+)') {
+              $totalIssues = $matches[1]
+              Write-Host "✅ Total SonarCloud Issues (OPEN): $totalIssues"
+              "sonarIssueCount=$totalIssues" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+            } else {
+              Write-Error "❌ Could not extract issue count from response body: $body"
+              exit 1
+            }
+          } catch {
+            Write-Error "❌ API call failed: $_"
+            exit 1
+          }
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      ##########################
       # SUMMARY SECTION
       ##########################
 
-      - name: 📊 Add Hygiene Summary (Checkstyle + PMD + JaCoCo)
+      - name: 📊 Add Hygiene Summary (Checkstyle + PMD + JaCoCo + Sonar Issues)
+        id: metrics
         shell: pwsh
         run: |
           # Parse JaCoCo XML
@@ -189,15 +239,16 @@ jobs:
           }
 
           $totalViolations = $checkstyleViolations + $pmdViolations
-
+         
           # Write summary
           echo "### 🧪 Hygiene Summary (Checkstyle + PMD + JaCoCo)" >> $env:GITHUB_STEP_SUMMARY
-          echo "|               **Metrics**         |      **Values**      |" >> $env:GITHUB_STEP_SUMMARY
-          echo "|-----------------------------------|----------------------|" >> $env:GITHUB_STEP_SUMMARY
-          echo "| Checkstyle Violations             | $checkstyleViolations|" >> $env:GITHUB_STEP_SUMMARY
-          echo "| PMD Code Smells                   | $pmdViolations       |" >> $env:GITHUB_STEP_SUMMARY
-          echo "| Total (PMD=CHECKSTYLE) Violations | $totalViolations     |" >> $env:GITHUB_STEP_SUMMARY
-          echo "| Coverage                          | $jacocoCoverage%     |" >> $env:GITHUB_STEP_SUMMARY
+          echo "|               **Metrics**           |      **Values**                                   |" >> $env:GITHUB_STEP_SUMMARY
+          echo "|-------------------------------------|---------------------------------------------------|" >> $env:GITHUB_STEP_SUMMARY
+          echo "| Checkstyle Violations               | $checkstyleViolations                             |" >> $env:GITHUB_STEP_SUMMARY
+          echo "| PMD Code Smells                     | $pmdViolations                                    |" >> $env:GITHUB_STEP_SUMMARY
+          echo "| Total (PMD=CHECKSTYLE) Violations   | $totalViolations                                  |" >> $env:GITHUB_STEP_SUMMARY
+          echo "| Coverage                            | $jacocoCoverage%                                  |" >> $env:GITHUB_STEP_SUMMARY
+          echo "| SonarCloud Total Issues             | ${{ steps.sonar_issues.outputs.sonarIssueCount }} |" >> $env:GITHUB_STEP_SUMMARY
           
           # === SonarCloud Dashboard Link ===
           $org = $env:SONAR_ORG
@@ -206,6 +257,12 @@ jobs:
           $sonarUrl = "https://sonarcloud.io/dashboard?id=$projectKey&branch=$branch"
           echo "" >> $env:GITHUB_STEP_SUMMARY
           echo "🔗 [View full SonarCloud Report]($sonarUrl)" >> $env:GITHUB_STEP_SUMMARY
+          echo "" >> $env:GITHUB_STEP_SUMMARY
+          
+          "checkstyleCount=$checkstyleViolations" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          "pmdCount=$pmdViolations" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          "jacocoPercent=$jacocoCoverage%" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          "sonarURL=$sonarUrl" | Out-File -FilePath $env:GITHUB_OUTPUT -Append               
           
           if ($jacocoCoverage -lt $env:JACOCO_MIN_COVERAGE) {
             echo "⚠️ Warning: Coverage $jacocoCoverage% is below threshold $env:JACOCO_MIN_COVERAGE%" >> $env:GITHUB_STEP_SUMMARY
@@ -247,7 +304,7 @@ jobs:
           }
 
       ##########################
-      # SUMMARY SECTION
+      # FULL CLEANUP
       ##########################
 
       - name: 🧹 Full Cleanup
@@ -259,4 +316,140 @@ jobs:
           rmdir /s /q reports >nul 2>&1
           del /q sources_*.txt >nul 2>&1
           echo ✅ Cleanup done 
+
+      ###################################################################
+      # CLEANUP VERIFICATION using (dir /s /b this is disabled for now)
+      ##################################################################
+      - name: 📂 List Remaining Files
+        shell: cmd
+        run: |
+          echo === POST-CLEANUP DIRECTORY TREE ===
+          echo Hello, world!
+
+      ###################################################################
+      # DEMONSTRATES, FLAG BASED EXECUTION
+      ##################################################################
+
+      - name: 🗣️ Say Hello (unless skipped)
+        if: env.SKIP_ECHO != 'true'
+        run: echo Hello, world!
+        shell: cmd
+
+      ##########################
+      # EXTRACT COMMIT STATS
+      ##########################
+
+      - name: 📦 Extract Commit Info (Windows PowerShell)
+        id: commit_info
+        shell: pwsh
+        run: |
+          $shortSha = git rev-parse --short HEAD
+          $fullSha = git rev-parse HEAD
+          $msg = git log -1 --pretty=%s
+          $author = git log -1 --pretty='%an'
+          $date = git log -1 --date=iso-local --pretty='%cd'
+
+          $commitTs = git log -1 --pretty=%ct
+          $nowTs = [int][double]::Parse((Get-Date -UFormat %s))
+          $deltaMin = [math]::Floor(($nowTs - $commitTs) / 60)
+
+          if ($deltaMin -lt 1) {
+            $ago = "Just now"
+          } elseif ($deltaMin -eq 1) {
+            $ago = "1 minute ago"
+          } else {
+            $ago = "$deltaMin minutes ago"
+          }
+
+          "SHORT_SHA=$shortSha" >> $env:GITHUB_OUTPUT
+          "FULL_SHA=$fullSha" >> $env:GITHUB_OUTPUT
+          "COMMIT_MSG=$msg" >> $env:GITHUB_OUTPUT
+          "COMMIT_AUTHOR=$author" >> $env:GITHUB_OUTPUT
+          "COMMIT_DATE=$date" >> $env:GITHUB_OUTPUT
+          "COMMIT_AGO=$ago" >> $env:GITHUB_OUTPUT
+
+      ###############################
+      # Calculate Execution Metrics
+      ##############################
+
+      - name: ⏱️ Calculate Duration and Export Timing
+        id: calculate-duration-and-export-timing
+        shell: pwsh
+        env:
+          START_EPOCH: ${{ steps.start_time.outputs.startTime }}
+        run: |
+          $startEpoch = [int]$env:START_EPOCH
+          $endEpoch = [int][double]::Parse((Get-Date -UFormat %s))
+          
+          $startDT = [System.DateTimeOffset]::FromUnixTimeSeconds($startEpoch).ToLocalTime().ToString("yyyy-MM-dd HH:mm:ss")
+          $endDT = [System.DateTimeOffset]::FromUnixTimeSeconds($endEpoch).ToLocalTime().ToString("yyyy-MM-dd HH:mm:ss")
+          
+          $durationSec = $endEpoch - $startEpoch
+          $mins = [math]::Floor($durationSec / 60)
+          $secs = $durationSec % 60
+          $durationFormatted = "{0}m {1}s" -f $mins, $secs
+          
+          echo "startTime=$startDT" >> $env:GITHUB_OUTPUT
+          echo "endTime=$endDT" >> $env:GITHUB_OUTPUT
+          echo "formattedDuration=$durationFormatted" >> $env:GITHUB_OUTPUT
+
+
+      ##########################
+      # Email Success Summary
+      ##########################
+
+      - name: 📬 Email Summary
+        uses: dawidd6/action-send-mail@v3
+        env:
+          CHECKSTYLE_VIOLATIONS: ${{ steps.metrics.outputs.checkstyleCount }}
+          PMD_VIOLATIONS: ${{ steps.metrics.outputs.pmdCount }}
+          JACOCO_COVERAGE_PERCENT: ${{ steps.metrics.outputs.jacocoPercent }}
+          SONARCLOUD_DASHBOARD_URL: ${{ steps.metrics.outputs.sonarURL }}
+          SHORT_SHA: ${{ steps.commit_info.outputs.SHORT_SHA }}
+          COMMIT_MSG: ${{ steps.commit_info.outputs.COMMIT_MSG }}
+          COMMIT_AUTHOR: ${{ steps.commit_info.outputs.COMMIT_AUTHOR }}
+          COMMIT_DATE: ${{ steps.commit_info.outputs.COMMIT_DATE }}
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          username: ${{ secrets.SMTP_USER }}
+          password: ${{ secrets.SMTP_PASS }}
+          subject: ${{ job.status == 'success' && '✅ SUCCESS' || '❌ FAILURE' }} — Java MasterClass Hygiene Check for ${{ github.repository }} (main)
+
+          to: hemantbellanilearns77@gmail.com
+          from: GitHub Hygiene Bot <hemantbellanilearns77@gmail.com>
+          html_body: |
+            <p>Hi Hemant,</p>
+            
+            <p>A GitHub Hygiene Check (CheckStyle, PMD, JaCoCo, SonarCloud) was successfully completed on the <strong>${{ github.repository }}</strong> repository (branch: <code>main</code>).</p>
+            
+            <p>🧼 <strong>Here is the Hygiene Summary:</strong></p>
+            <ul>
+              <li>✅ Checkstyle Violations: <strong>${{ steps.metrics.outputs.checkstyleCount }}</strong></li>
+              <li>✅ PMD Violations: <strong>${{ steps.metrics.outputs.pmdCount }}</strong></li>
+              <li>📊 Code Coverage: <strong>${{ steps.metrics.outputs.jacocoPercent }}</strong></li>
+              <li>🧠 SonarCloud Total Issues: <strong>${{ steps.sonar_issues.outputs.sonarIssueCount }}</strong></li>
+              <li>🔗 <a href="${{ steps.metrics.outputs.sonarURL }}">View full SonarCloud Report</a></li>
+            </ul>
+            <p>📦 <strong>Artifacts:</strong> <a href="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}">Download from workflow run</a></p>
+            <p>🧑‍💻 <strong>Last Commit Info:</strong></p>
+            <ul>
+              <li><strong>SHA:</strong> <a href="https://github.com/${{ github.repository }}/commit/${{ steps.commit_info.outputs.FULL_SHA }}"><code>${{ steps.commit_info.outputs.SHORT_SHA }}</code></a></li>
+              <li><strong>Message:</strong> <em>${{ steps.commit_info.outputs.COMMIT_MSG }}</em></li>
+              <li><strong>Author:</strong> ${{ steps.commit_info.outputs.COMMIT_AUTHOR }}</li>
+              <li><strong>Date:</strong> ${{ steps.commit_info.outputs.COMMIT_DATE }} <span style="color:gray;">(${{ steps.commit_info.outputs.COMMIT_AGO }})</span></li>
+              <li><strong>🔗 View Commit on GitHub:</strong> <a href="https://github.com/${{ github.repository }}/commit/${{ steps.commit_info.outputs.FULL_SHA }}">Open Commit</a></li>
+              <li><strong>🔗 View Commit:</strong>
+                  <a href="https://github.com/${{ github.repository }}/commit/${{ steps.commit_info.outputs.FULL_SHA }}">Open on GitHub</a>
+              </li>
+            </ul>
+            <p><strong>🕒 Job Execution:</strong></p>
+             <ul>
+                <li><strong>Start Time:</strong> ${{ steps.calculate-duration-and-export-timing.outputs.startTime }}</li>
+                <li><strong>End Time:</strong> ${{ steps.calculate-duration-and-export-timing.outputs.endTime }}</li>
+                <li><strong>Job Duration:</strong> ${{ steps.calculate-duration-and-export-timing.outputs.formattedDuration }}</li>
+              </ul>
+            <hr>
+            <p><em>🤖 This is an automated message from a GitHub Actions workflow.<br>
+            Please do not reply.</em></p> 
 
