--- a/.github/workflows/hygiene-cheks-pipeline.yaml
+++ b/.github/workflows/hygiene-cheks-pipeline.yaml
@@ -1,7 +1,8 @@
 name: 📊 Hygiene Checks Pipeline
-
 on:
-  workflow_dispatch: # run manually
+   workflow_dispatch: # run manually
+  # schedule:
+  #  - cron: '41 04 * * 5' # runs at 1025 hours IST or 0441 hours UTC every friday
 
 jobs:
   hygiene-checks:
@@ -199,7 +200,7 @@ jobs:
         if: success()
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: scripts\run-all-hygiene.bat githubactions
+        run: scripts\hygiene-check-analysis.bat githubactions
         shell: cmd
 
       ##########################
