--- a/.github/workflows/hygiene-checks-pipeline.yaml
+++ b/.github/workflows/hygiene-checks-pipeline.yaml
@@ -1,40 +1,49 @@
 name: 📊 Hygiene Checks Pipeline
 on:
   workflow_dispatch: # run manually
-  # schedule:
-  #   - cron: '45 06 * * 1-4' # Runs 12:15 PM IST  every WeekDay excluding Friday
-  #   - cron: '38 7 * * *' # Runs 1:08 PM IST  every Day
-  # push:
-  #   branches:
-  #   - main
+  schedule:
+    # - cron: '45 06 * * 1-4' # Runs 12:15 PM IST  every WeekDay excluding Friday
+    - cron: '38 7 * * *' # Runs 1:08 PM IST  every Day
+#  push:
+#    branches:
+#    - main
+  pull_request:
+    branches:
+      - main
+      # - stage
+      # - tech-debt
 jobs:
   hygiene-checks:
     name: Hygiene Checks - Checkstyle + PMD + JaCoCo + Sonar
     runs-on: windows-latest
     env:
+      SONAR_ORG: ${{ vars.SONAR_ORG }}
+      SONAR_PROJECT_KEY: ${{ vars.SONAR_PROJECT_KEY }}
+      SONAR_FETCH_SLEEP_TIME: 27
       MODULE_PATHS: |
         udemy_lpa_javamasterclass_main=src/main/java/com/hb/study/udemy_lpa_javamasterclass
         misc_utils_main=misc_utils/src/main/java/com/hb/study/misc_utils
         udemy_lpa_javamasterclass_test=src/test/java/com/hb/study/udemy_lpa_javamasterclass
         misc_utils_test=misc_utils/src/test/java/com/hb/study/misc_utils
-      TRIGGER_TYPE: ${{ github.event_name }}
-      TRIGGER_BRANCH: ${{ github.ref_name }}
       JACOCO_MIN_COVERAGE: 9
-      CHECKSTYLE_PMD_MAX_TOTAL_VIOLATIONS: 12006
-      CHECKSTYLE_MAX_VIOLATIONS: 12000
+      CHECKSTYLE_PMD_MAX_TOTAL_VIOLATIONS: 1008
+      CHECKSTYLE_MAX_VIOLATIONS: 945
       PMD_MAX_VIOLATIONS: 63
-      SONAR_ORG: ${{ vars.SONAR_ORG }}
-      SONAR_PROJECT_KEY: ${{ vars.SONAR_PROJECT_KEY }}
-      SONAR_FETCH_SLEEP_TIME: 27
+      BLOCKER_MAX: 0
+      HIGH_MAX: 27          # keep backward compatible
+      MEDIUM_MAX: 63
+      LOW_MAX: 63
+      INFO_MAX: 99
+
 
     steps:
-
       ####################################################
       # CHECKOUT CODE COMMITTED
       ####################################################
-      - name: ?? Checkout Code
+      - name: Checkout Code
         uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.pull_request.head.ref || github.ref_name }}
           fetch-depth: 0   # fetches all history, not just 1 commit
 
       ####################################################
@@ -51,9 +60,10 @@ jobs:
       - name: Hygiene Health Checks and Upload Reports - Composite Call
         id: hygiene-sweep-and-upload-reports
         uses: ./.github/actions/hygiene-health-sweep-and-upload-reports
-        with: {}
+        with:
+          SKIP_FLAG: ${{ steps.setup.outputs.SKIP_FLAG }}
         env:
-            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       ##############################################################
         # PUBLISH GITHUB SUMMARY AND SEND-EMAIL - COMPOSITE CALL
@@ -63,7 +73,9 @@ jobs:
         id: publish-githubsummary-and-sendemail
         uses: ./.github/actions/publish-githubsummary-and-email
         with:
-          startTime: ${{ steps.start_time.outputs.startTime }}
+          startTime: ${{ steps.setup.outputs.startTime }}
+          BRANCH_EXECUTED: ${{ steps.setup.outputs.BRANCH_EXECUTED }}
+          SKIP_FLAG: ${{ steps.setup.outputs.SKIP_FLAG }}
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SMTP_SERVER_ADDRESS: ${{ vars.SMTP_SERVER_ADDRESS }}
@@ -71,6 +83,15 @@ jobs:
           SMTP_USER: ${{ secrets.SMTP_USER }}
           SMTP_PASS: ${{ secrets.SMTP_PASS }}
           EMAIL_RECIPIENT: ${{ vars.EMAIL_RECIPIENT }}
+          JACOCO_MIN_COVERAGE: ${{ env.JACOCO_MIN_COVERAGE }}
+          CHECKSTYLE_PMD_MAX_TOTAL_VIOLATIONS: ${{ env.CHECKSTYLE_PMD_MAX_TOTAL_VIOLATIONS }}
+          CHECKSTYLE_MAX_VIOLATIONS:  ${{ env.CHECKSTYLE_MAX_VIOLATIONS }}
+          PMD_MAX_VIOLATIONS:  ${{ env.PMD_MAX_VIOLATIONS }}
+          BLOCKER_MAX:  ${{ env.BLOCKER_MAX }}
+          HIGH_MAX:  ${{ env.HIGH_MAX }}          # keep backward compatible
+          MEDIUM_MAX:  ${{ env.MEDIUM_MAX }}
+          LOW_MAX:  ${{ env.LOW_MAX }}
+          INFO_MAX:  ${{ env.INFO_MAX }}
 
       #############################
         # FULL CLEANUP AND VERIFY
