--- a/.github/workflows/hygiene-checks-pipeline.yaml
+++ b/.github/workflows/hygiene-checks-pipeline.yaml
@@ -2,17 +2,19 @@ name: 📊 Hygiene Checks Pipeline
 on:
   workflow_dispatch: # Run manually
   # schedule:
-    # Runs at 3:30 AM UTC (9:00 AM IST) and 3:30 PM UTC (9:00 PM IST), every Monday-Thursday and Saturday
+    Runs at 3:30 AM UTC (9:00 AM IST) and 3:30 PM UTC (9:00 PM IST), every Monday-Thursday and Saturday
     # - cron: '30 3,15 * * 1-4,6'
-    # Runs on 6:39 PM UTC on Thursday ( 12:09 AM IST on Friday),
-    # 3:30 AM UTC on Friday (9:00 AM IST on Friday) and 6:45 AM UTC on Friday (12:15 PM IST on Friday)
+    Runs on 6:39 PM UTC on Thursday ( 12:09 AM IST on Friday),
+    3:30 AM UTC on Friday (9:00 AM IST on Friday) and 6:45 AM UTC on Friday (12:15 PM IST on Friday)
     # - cron: '39 18 * * 4' # For Friday 12:09 AM IST (runs on Thursday UTC)
     # - cron: '30 3 * * 5' # For Friday 9:00 AM IST
     # - cron: '45 6 * * 5' # For Friday 12:15 PM IST
 #  push:
 #    branches:
 #      - main
-
+permissions:
+  actions: write
+  contents: read
 jobs:
   pre-setup-job:
     runs-on: windows-latest
@@ -168,36 +170,13 @@ jobs:
       SMTP_PASS: ${{ secrets.SMTP_PASS }}
       EMAIL_RECIPIENT: ${{ vars.EMAIL_RECIPIENT }}
     steps:
-#      # Cancel gracefully if needed
-#      - name: Cancel current workflow gracefully
-#        id: cancel-hygiene
-#        shell: pwsh
-#        run: |
-#          $msg = "${{ needs.pre-setup-job.outputs.pre-setup-decision-reason }}"
-#          Write-Host "ℹ️ Cancelling workflow without executing hygiene sweep."
-#          Write-Host "Cancel Reason:  $msg"
-#          echo "### ❌ Hygiene Checks Cancelled" >> $env:GITHUB_STEP_SUMMARY
-#          echo "" >> $env:GITHUB_STEP_SUMMARY
-#          echo "$msg" >> $env:GITHUB_STEP_SUMMARY
-#          echo "" >> $env:GITHUB_STEP_SUMMARY
-#          echo "**Triggered by:** ${{ github.event_name }}" >> $env:GITHUB_STEP_SUMMARY
-#          echo "**Branch:** ${{ github.ref_name }}" >> $env:GITHUB_STEP_SUMMARY
-#          # Use fallback for workflow_dispatch
-#          $lastCommitMessage = "${{ needs.pre-setup-job.outputs.last-commit-msg }}"
-#          $lastCommitAuthor = "${{ needs.pre-setup-job.outputs.last-commit-author }}"
-#
-#          if ([string]::IsNullOrEmpty($lastCommitMessage)) {
-#            $lastCommitMessage = "N/A (manual workflow_dispatch)"
-#          }
-#
-#          if ([string]::IsNullOrEmpty($lastCommitAuthor)) {
-#            $lastCommitAuthor = "N/A"
-#          }
-#          echo "**Last Commit Message:** $lastCommitMessage" >> $env:GITHUB_STEP_SUMMARY
-#          echo "**Last Commit Author:** $lastCommitAuthor" >> $env:GITHUB_STEP_SUMMARY
-#          exit 1
-
-
+          # Checkout Code
+        - name: Checkout default branch
+          uses: actions/checkout@v4
+          with:
+            ref: ${{ github.event.repository.default_branch }} # will be "main"
+            fetch-depth: 0
+            token: ${{ secrets.PAT_TOKEN }}
         # Cancel gracefully if needed
         - name: Cancel current workflow gracefully
           id: cancel-hygiene
@@ -208,7 +187,8 @@ jobs:
             last-commit-author: ${{ needs.pre-setup-job.outputs.last-commit-author }}
             github-event: ${{ github.event_name }}
             branch: ${{ github.ref_name }}
-#      - name: Send Cancellation Email
-#        run: |
-#          echo "Sending cancellation mail..."
-#          # call SMTP composite or script here
+            run-id: ${{ github.run_id }}
+            repository: ${{ github.repository }}
+
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
